--- a/aplicacaoLoja/aplicacaoLoja.csproj
+++ b/aplicacaoLoja/aplicacaoLoja.csproj
@@ -26,4 +26,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\logo.png" />
+  </ItemGroup>
+
 </Project>
